<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchFragment">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="196dp"
            android:layout_height="246dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="395dp"
            android:src="@drawable/websearch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="361dp"
            android:layout_height="50dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="357dp"
            android:layout_marginBottom="324dp"
            android:ems="10"
            android:hint="Enter your Search!"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="Search"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchInput"
            app:layout_constraintVertical_bias="0.812" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="123dp"
            android:layout_marginTop="607dp"
            android:layout_marginBottom="80dp"
            android:text="Search History"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/search_type_group"
            android:layout_width="390dp"
            android:layout_height="53dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="424dp"
            android:layout_marginBottom="254dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/image_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Image Search"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/news_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="News Search"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/web_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Web Search"
                android:textSize="16sp" />

        </RadioGroup>


        <Switch
            android:id="@+id/safesearchtoggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SafeSearch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_type_group"
            app:layout_constraintVertical_bias="0.066" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>